--- a/gradle.properties
+++ b/gradle.properties
@@ -38,12 +38,12 @@ mod_name=Prototype: Physics
 # The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
 mod_license=MIT
 # The mod version. See https://semver.org/
-mod_version=1.0-SNAPSHOT
+mod_version=1.5
 # The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
 # This should match the base package used for the mod sources.
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
 mod_group_id=net.adinvas
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
-mod_authors=
+mod_authors=AdInVas
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description=
+mod_description= A simple PlayerRagdoll Library
